Fix for bug 96455: hr has duplicate lineboxes in frame tree

- Move code in HaveFirstLetter*() methods to a more generic method
    HasPseudoStyle() to expand it's use, and make those methods call it.

  - Added static method RemoveGeneratedContentFrameSiblings(), which
    is now called from ContentRemoved(), to remove any sibling :before
    and :after frames for a given frame.

r=attinasi@netscape.com (also looked at by rbs@maths.uq.edu.au)
sr=waterson@netscape.com